Training : handson Gitlab-CI/CD

--- a/31-ci-multiproject-ansible/gitlab-ci-p1.yml
+++ b/31-ci-multiproject-ansible/gitlab-ci-p1.yml
@@ -15,7 +15,7 @@ db:
         PG_DB: "mydatabase"
     stage: database
     trigger:
-        project: xavki/ansible_pg
+        project: Saliou/ansible_pg
         branch: main
         strategy: depend
 
