--- a/31-ci-multiproject-ansible/pg/env/stage/group_vars/all.yml
+++ b/31-ci-multiproject-ansible/pg/env/stage/group_vars/all.yml
@@ -4,6 +4,6 @@ docker_docker_conf:
   insecure-registries: ["192.168.5.5:5000"]
 
 registry_url: "https://192.168.5.5:5000/v2/"
-registry_user: "xavki"
+registry_user: "Saliou"
 registry_password: "password"
 
